--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
+<app-header></app-header>
+
 <span>{{ title }} app is running!</span>
 
 <app-games></app-games>
 
 <app-users></app-users>
+
+<app-footer></app-footer>
