--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,27 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+        <img [src]="enderecoLogo" width="150" height="60" class="d-inline-block align-top" alt="">
+      </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <span class="sr-only">
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" type="pesquisar" placeholder="Pesquisar" aria-label="Pesquisar">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+              </form>
+          </span>
+        </li>
+        <li class="nav-item active">
+            <span class="sr-only" style="left: 0px;">
+                <form class="form-inline">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="onLogin()">{{login}}</button>
+                </form>
+            </span>
+          </li>
+      </ul>
+    </div>
+  </nav>
