--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-light text-muted mt-auto">
+    <!-- Copyright -->
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+      © {{ this.year }} Copyright:
+      <a class="text-reset fw-bold" href="">Murilo Dias Firmino Felipin</a>
+    </div>
+    <!-- Copyright -->
+</footer>
+  <!-- Footer -->
