feat: Implementado cadastro e web storage

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -43,7 +43,7 @@
       </a>
     </div>
     <div>
-      <a>
+      <a routerLink="/gerenciarUsuarios">
         <div class="btn btn-outline-success my-2 my-sm-0" name="listarUsers">
           Users
         </div>
