--- a/src/app/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/src/app/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -25,7 +25,7 @@
                 <td>{{ user.username }}</td>
                 <td>{{ user.login }}</td>
                 <td>{{ user.password }}</td>
-                <td>{{ user.ativo }}</td>
+                <td>{{ user.ativo | ativoDesativo}}</td>
             </tr>
         </tbody>
     </table>
