--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -36,7 +36,7 @@
   </div>
   <div class="d-flex" style="text-align: center;">
     <div>
-      <a routerLink="listarJogos">
+      <a routerLink="/gerenciarJogos">
         <div class="btn btn-outline-success my-2 my-sm-0" name="listarJogos">
           Jogos
         </div>
