--- a/src/app/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/src/app/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -14,6 +14,7 @@
     <table class="table">
         <thead>
             <tr>
+                <th>Id</th>
                 <th>Nome Usuario</th>
                 <th>Login</th>
                 <th>Senha</th>
@@ -24,6 +25,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let user of listaUsuariosAtivos">
+                <th>{{ user.id }}</th>
                 <td>{{ user.username }}</td>
                 <td>{{ user.login }}</td>
                 <td>{{ user.password }}</td>
@@ -39,10 +41,10 @@
                       </ng-template>
                 </td>
                 <td>
-                    <button class="btn btn-outline-info my-2 my-sm-0" (click)="editarUsuario(user)">Editar</button>
+                    <button class="btn btn-outline-info my-2 my-sm-0" (click)="editarUsuario(user.id)">Editar</button>
                 </td>
                 <td>
-                    <button class="btn btn-outline-danger my-2 my-sm-0" (click)="editarUsuario(user)">Remover</button>
+                    <button class="btn btn-outline-danger my-2 my-sm-0" (click)="editarUsuario(user.id)">Remover</button>
                 </td>
             </tr>
         </tbody>
