--- a/src/app/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/src/app/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -18,6 +18,7 @@
                 <th>Login</th>
                 <th>Senha</th>
                 <th>Ativo</th>
+                <th>Ações</th>
             </tr>
         </thead>
         <tbody>
@@ -26,6 +27,9 @@
                 <td>{{ user.login }}</td>
                 <td>{{ user.password }}</td>
                 <td>{{ user.ativo | ativoDesativo}}</td>
+                <td>
+                    <button class="btn btn-outline-danger my-2 my-sm-0" (click)="remover(user.id)">Remover</button>
+                </td>
             </tr>
         </tbody>
     </table>
