desenvolvido listagemd e jogos

--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -1,6 +1,18 @@
 <div class="intro z-depth-1" [ngStyle]="this.getBackgroudImage()">
     <div class="container">
         <input [(ngModel)]="popularGames">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-md-4 my-4" *ngFor="let game of games">
+                <div class="card card-centered" style="width: 18rem;">
+                    <img src="{{ game.linkImg }}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-ellipsis">{{ game.nome }}</h5>
+                        <p class="card-text text-ellipsis">{{ game.descricao }}</p>
+                        <a href="{{ game.linkDown }}" class="btn btn-primary">Download</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <div>
