--- a/src/app/games/games.component.css
+++ b/src/app/games/games.component.css
@@ -14,3 +14,14 @@
     padding-bottom: 3%;
     margin-bottom: 50px;
 }
+
+.text-ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .card-centered {
+    margin: 0 auto; /* Centraliza horizontalmente */
+  }
+  
