feat: Implementar editar de jogos

--- a/src/app/gerenciar-jogos/gerenciar-jogos.component.html
+++ b/src/app/gerenciar-jogos/gerenciar-jogos.component.html
@@ -19,6 +19,8 @@
                 <th>Descrição</th>
                 <th>Link Download</th>
                 <th>Ações</th>
+                <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -27,6 +29,9 @@
                 <td>{{ game.nome }}</td>
                 <td>{{ game.descricao }}</td>
                 <td><a>{{ game.linkDown }}</a></td>
+                <td>
+                    <button class="btn btn-outline-info my-2 my-sm-0" (click)="editar(game.id)">Editar</button>
+                </td>
                 <td>
                     <button class="btn btn-outline-danger my-2 my-sm-0" (click)="remover(game.id)">Remover</button>
                 </td>
