feat: Corrigido dashboard

--- a/src/app/games-list/games-list.component.html
+++ b/src/app/games-list/games-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
     <div>
-        <input [(ngModel)]="recentGames">
+        <input [(ngModel)]="popularGames">
     </div>
 </div>
