--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -17,6 +17,6 @@
 </div>
 <div>
     <div class="container any-component">
-        <app-games-list [popularGames]="popularGames"></app-games-list>
+        <app-games-list [subGames]="subGames"></app-games-list>
     </div>
 </div>
